LifeTimeCalc notebook finished
Signed-off-by: Daniel Kreuter <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/LifeTimeCalc.ipynb
+++ b/demos/LifeTimeCalc.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nominal Stress approach ###\n",
-    "This Notebook shows a general calculation stream for a nominal stress reliability approach.\n",
+    "### Life time Calculation ###\n",
+    "This Notebook shows a general calculation stream for a nominal and local stress reliability approach.\n",
     "#### Stress derivation #####\n",
     "First we read in different time signals (coming from a test bench or a vehicle measurement e.g.).\n",
     "\n",
@@ -17,11 +17,18 @@
     "6. Mean stress correction\n",
     "7. Multiplication with repeating factor of every manoveur\n",
     "\n",
-    "#### Strength derivation #####\n",
-    "1. Import the SN data\n",
-    "2. Define load cycle limit\n",
-    "3. Select the material cycle parameter calculation method\n",
-    "4. Plot and check"
+    "#### Damage Calculation ####\n",
+    "1. Select the damage calculation method (Miner elementary, Miner-Haibach, ...)\n",
+    "2. Calculate the damage for every load level and the damage sum\n",
+    "3. Calculate the failure probability with or w/o field scatter\n",
+    "\n",
+    "#### Local stress approach ####\n",
+    "1. Load the FE mesh\n",
+    "2. Apply the load history to the FE mesh\n",
+    "3. Calculate the damage\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -488,7 +495,8 @@
    "source": [
     "damage_calc = sn_curve.FiniteLifeCurve(**mat.drop(['1/TN','1/TS']))\n",
     "damage = damage_calc.calc_damage(range_only_total,method = 'original')\n",
-    "display(damage)"
+    "# display(damage)\n",
+    "print(\"\\033[5m  Total Damage of channel %s: %.2e  \\033[0m\" % (rfcChan.value,damage.sum()))"
    ]
   },
   {
@@ -501,31 +509,10 @@
     "\n",
     "SRI = mat['SD_50']*(mat['ND_50']**(1/mat['k_1']))\n",
     "# Plotting\n",
-    "diagdata = WoehlerCurveDiagrams(mat, fatigue_data = None, analyzer = None,y_min=1, y_max=SRI, x_min=1e1, x_max=1e12)\n",
-    "diagdata.plot_fitted_curve( k_2=np.inf)\n",
-    "# plt.barh(stress_finite,np.cumsum(data_finite.values), height = data_finite.index.get_level_values('range').length.min())\n",
-    "plt.step(np.cumsum(cycles),2*amplitude)\n",
-    "plt.ylim(1,SRI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diagdata.y_max\n",
-    "# %matplotlib notebook\n",
-    "# plt.step(np.cumsum(cycles),2*amplitude)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SRI"
+    "diagdata = WoehlerCurveDiagrams(mat, fatigue_data = None, analyzer = None,\n",
+    "                                y_min=2, y_max=SRI, x_min=1e1, x_max=1e12, ax = None)\n",
+    "diagdata.plot_fitted_curve( k_2=15)\n",
+    "plt.step(np.cumsum(cycles),2*amplitude)\n"
    ]
   },
   {
@@ -549,22 +536,23 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "D50 = 0.3\n",
-    "mat_std = np.log10(mat_para['TN_inv'])/2.5631031311\n",
-    "dmin = d/10\n",
-    "di = np.linspace(dmin,50*d,1000)\n",
-    "failprob = fp.FailureProbability(D50,mat_std).pf_simple_load(di)\n",
+    "D50 = 0.05\n",
+    "d = damage.sum()\n",
+    "di = np.logspace(np.log10(1e-1*d),np.log10(1e3*d),1000).flatten()\n",
+    "std = np.log10(mat['1/TN'])/2.5631031311\n",
+    "failprob = fp.FailureProbability(D50,std).pf_simple_load(di)\n",
     "#print(failprob)\n",
     "fig, ax = plt.subplots()\n",
     "ax.semilogx(di, failprob, label='cdf')\n",
-    "ax.vlines(d, 0, fp.FailureProbability(D50,mat_std).pf_simple_load(d))\n",
+    "ax.vlines(d, max(failprob), fp.FailureProbability(D50,std).pf_simple_load(d))\n",
     "# \n",
     "ix = np.linspace(dmin, d)\n",
-    "ax.fill_between(ix, fp.FailureProbability(D50,mat_std).pf_simple_load(ix), y2=0,color = 'y')\n",
+    "ax.fill_between(ix.flatten(), fp.FailureProbability(D50,std).pf_simple_load(ix).flatten(), y2=0,color = 'y')\n",
     "plt.xlabel(\"Damage\")\n",
     "plt.ylabel(\"cdf\")\n",
-    "plt.title(\"Failure probability = %.2f\" %fp.FailureProbability(D50,mat_std).pf_simple_load(d))  \n",
-    "plt.ylim(0,1)"
+    "plt.title(\"Failure probability = %.2e\" %fp.FailureProbability(D50,std).pf_simple_load(d))  \n",
+    "plt.ylim(0,max(failprob))\n",
+    "plt.xlim(min(di),max(di))"
    ]
   },
   {
@@ -583,18 +571,15 @@
     "field_std = 0.35\n",
     "fig, ax = plt.subplots()\n",
     "# plot pdf of material\n",
-    "mat_pdf = norm.pdf(np.log10(di), loc=np.log10(D50), scale=mat_std)\n",
+    "mat_pdf = norm.pdf(np.log10(di), loc=np.log10(D50), scale=std)\n",
     "ax.semilogx(di, mat_pdf, label='pdf_mat')\n",
     "# plot pdf of load\n",
     "field_pdf = norm.pdf(np.log10(di), loc=np.log10(d), scale=field_std)\n",
     "ax.semilogx(di, field_pdf, label='pdf_load',color = 'r')\n",
-    "# area_1\n",
-    "area = np.minimum(mat_pdf, field_pdf)\n",
-    "ax.fill_between(di, area, y2=0,color = 'y')\n",
     "plt.xlabel(\"Damage\")\n",
     "plt.ylabel(\"pdf\")\n",
-    "plt.title(\"Failure probability = %.2f\" %fp.FailureProbability(D50,mat_std).pf_norm_load(d,field_std))  \n",
-    "plt.legend()\n"
+    "plt.title(\"Failure probability = %.2e\" %fp.FailureProbability(D50,std).pf_norm_load(d,field_std))  \n",
+    "plt.legend()"
    ]
   },
   {
@@ -627,10 +612,9 @@
     "s_vm = stress.groupby('element_id').mean().equistress.mises().rename(columns={'mises': 'sigma_a'})\n",
     "s_vm = 2*s_vm/s_vm.max()\n",
     "\"\"\" Scale with \"\"\"\n",
-    "ampl = pd.DataFrame(data = data_finite.index.get_level_values('range').mid.values, columns = [\"ampl\"] ,index = data_finite[\"frequency\"].values)\n",
-    "s_vm_scaled = pd.DataFrame(data = ampl.values*s_vm.transpose().values,index = ampl.index,columns = s_vm.index)\n",
-    "#display(s_vm_scaled)\n",
-    "#data_finite = data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]][::-1]"
+    "ampl_fe = pd.DataFrame(data = amplitude, columns = [\"ampl\"] ,index =cycles)\n",
+    "s_vm_scaled = pd.DataFrame(data = ampl_fe.values*s_vm.transpose().values,index = ampl.index,columns = s_vm.index)\n",
+    "display(s_vm_scaled)"
    ]
   },
   {
@@ -646,10 +630,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s_vm_scaled[s_vm_scaled < mat_para['SD_50']] = 0\n",
-    "N = damage_calc.sn_curve.calc_N(s_vm_scaled,ignore_limits = True)\n",
+    "N = damage_calc.calc_N(s_vm_scaled,ignore_limits = True)\n",
     "d_mesh_cycle =  1/(N.div(N.index.values, axis = 'index'))\n",
     "#np.sum(data_act[range_mid > sn_curve_parameters[\"sigma_ak\"]].values/N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(d_mesh_cycle.max())"
    ]
   },
   {
