psd_optimizer finished,

--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -19,8 +19,7 @@
     "import numpy as np\n",
     "from scipy import optimize as op\n",
     "import sys\n",
-    "sys.path.append(\"C:/python/pyLife/pylife/stress\")\n",
-    "from pylife.stress import psd_optimizer as psd_opt\n",
+    "from pylife.stress.frequencysignal import psdSignal\n",
     "import ipywidgets as wd"
    ]
   },
@@ -30,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psd = pd.read_csv(\"PSD_values.csv\",index_col = 0).iloc[5:1500,0]"
+    "psd = pd.DataFrame(pd.read_csv(\"PSD_values.csv\",index_col = 0).iloc[5:1500,0])"
    ]
   },
   {
@@ -39,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib notebook\n",
     "#fsel = np.array([30,50,80,460,605,1000])\n",
     "fsel = []\n",
     "%matplotlib notebook\n",
@@ -75,12 +75,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib notebook\n",
     "def rms_psd(psd):\n",
-    "    return (sum((np.diff(psd)+psd[:-1])*np.diff(psd.index.values))**0.5)\n",
+    "    return (sum(((psd.diff()+psd).dropna().values.flatten()*np.diff(psd.index.values)))**0.5)\n",
     "plt.loglog(psd.index.values,psd,label = \"{:.2f}\".format(rms_psd(psd)))\n",
     "rms = []\n",
     "for ii in np.linspace(0,1,4):\n",
-    "    psd_fit = psd_opt.psd_optimizer(psd,fsel,ii)\n",
+    "    psd_fit = psdSignal.psd_smoother(psd,fsel,ii)\n",
     "    rms.append(rms_psd(psd_fit))\n",
     "    plt.loglog(psd.index.values,psd_fit,label = \"{:.2f}\".format(rms[int(ii)]))\n",
     "plt.legend()"
