rms calculation of psd

--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -76,14 +76,10 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "def rms_psd(psd):\n",
-    "    return (sum(((psd.diff()+psd).dropna().values.flatten()*np.diff(psd.index.values)))**0.5)\n",
-    "plt.loglog(psd.index.values,psd,label = \"{:.2f}\".format(rms_psd(psd)))\n",
-    "rms = []\n",
+    "plt.loglog(psd.index.values,psd,label = \"{:.2f}\".format(psdSignal.rms_psd(psd).max()))\n",
     "for ii in np.linspace(0,1,4):\n",
     "    psd_fit = psdSignal.psd_smoother(psd,fsel,ii)\n",
-    "    rms.append(rms_psd(psd_fit))\n",
-    "    plt.loglog(psd.index.values,psd_fit,label = \"{:.2f}\".format(rms[int(ii)]))\n",
+    "    plt.loglog(psd_fit.index.values,psd_fit,label = \"{:.2f}\".format(psdSignal.rms_psd(psd_fit).max()))\n",
     "plt.legend()"
    ]
   },
