--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -66,6 +66,8 @@
    "outputs": [],
    "source": [
     "fsel = np.asarray(fsel)\n",
+    "# please uncomment the following line. It is just for utomatization purpose\n",
+    "fsel = np.asarray([22,264,1035,624,10])\n",
     "print(fsel)"
    ]
   },
@@ -76,10 +78,14 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "plt.loglog(psd.index.values,psd,label = \"{:.2f}\".format(psdSignal.rms_psd(psd).max()))\n",
+    "def rms_psd(psd):\n",
+    "    return (sum(((psd.diff()+psd).dropna().values.flatten()*np.diff(psd.index.values)))**0.5)\n",
+    "plt.loglog(psd.index.values,psd,label = \"{:.2f}\".format(rms_psd(psd)))\n",
+    "rms = []\n",
     "for ii in np.linspace(0,1,4):\n",
     "    psd_fit = psdSignal.psd_smoother(psd,fsel,ii)\n",
-    "    plt.loglog(psd_fit.index.values,psd_fit,label = \"{:.2f}\".format(psdSignal.rms_psd(psd_fit).max()))\n",
+    "    rms.append(rms_psd(psd_fit))\n",
+    "    plt.loglog(psd_fit.index.values,psd_fit,label = \"{:.2f}\".format(rms[int(ii)]))\n",
     "plt.legend()"
    ]
   },
@@ -88,7 +94,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "psd_fit"
+   ]
   }
  ],
  "metadata": {
