some more changes in psd_optimizer notebook
Signed-off-by: Daniel Kreuter <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## PSD Optimizer ##\n",
-    "\n"
+    "Example for the derivation of an equivalent PSD signal for shaker testing or other purposes. See the docu of the pylife psd_smoother function in the psdSignal class for more details"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "source": [
     "fsel = np.asarray(fsel)\n",
     "# please uncomment the following line. It is just for utomatization purpose\n",
-    "fsel = np.asarray([22,264,1035,624,10])\n",
+    "fsel = np.asarray([5,29,264,1035,1300,])\n",
     "print(fsel)"
    ]
   },
@@ -80,22 +80,12 @@
     "%matplotlib notebook\n",
     "def rms_psd(psd):\n",
     "    return (sum(((psd.diff()+psd).dropna().values.flatten()*np.diff(psd.index.values)))**0.5)\n",
-    "plt.loglog(psd.index.values,psd,label = \"{:.2f}\".format(rms_psd(psd)))\n",
-    "rms = []\n",
+    "plt.loglog(psd.index.values,psd,label = \"rms = {:.2f}\".format(rms_psd(psd)))\n",
     "for ii in np.linspace(0,1,4):\n",
     "    psd_fit = psdSignal.psd_smoother(psd,fsel,ii)\n",
-    "    rms.append(rms_psd(psd_fit))\n",
-    "    plt.loglog(psd_fit.index.values,psd_fit,label = \"{:.2f}\".format(rms[int(ii)]))\n",
+    "    plt.loglog(psd_fit.index.values,psd_fit,label = \"rms = {:.2f}\".format(rms_psd(psd_fit)))\n",
+    "    jj += 1\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "psd_fit"
    ]
   }
  ],
