lifetime automatized for docu
Signed-off-by: Daniel Kreuter <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -80,7 +80,13 @@
    "metadata": {},
    "source": [
     "### Time series signal ###\n",
-    "import, filtering and so on"
+    "import, filtering and so on. You can import your own signal with\n",
+    "\n",
+    "* [pd.read_csv()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html)\n",
+    "* [pd.read_excel()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_excel.html)\n",
+    "* [scipy.io.loadmat()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.io.loadmat.html) for matlab files \n",
+    "\n",
+    "and so on"
    ]
   },
   {
@@ -89,10 +95,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [\"IIS0042_DAT_2017LK065HU004_000100_0206_ESP_FA_arf_0004163.dat.csv\",\n",
-    "         \"IIS0042_DAT_2017LK065HU004_000100_0206_ALC7_abf_0004587.dat.csv\",\n",
-    "         \"IIS0042_DAT_2017LK065HU004_000100_0205_hfc2_abf_0003880.dat.csv\"]\n",
-    "data_loc = '\\\\\\\\fe00fs76.de.bosch.com\\\\SP17_Extern$\\\\SP17-010\\\\TSIPRAS\\\\MeasuredData\\\\Messdaten_ESP_Maneuver\\\\'"
+    "t = np.linspace(0,60,60*2048)\n",
+    "files = ['wn','sine']\n",
+    "wn = pd.DataFrame(index = t, columns = ['sensor_1'], data = 120*np.random.randn(len(t)))\n",
+    "sine = pd.DataFrame(index = t, columns = ['sensor_1'], data = 80*np.sin(2*np.pi*50*t))\n",
+    "input_data = [wn,sine]"
    ]
   },
   {
@@ -101,14 +108,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data = []\n",
-    "for upload in files:\n",
-    "    data_akt = pd.read_csv(data_loc + upload, sep = \",\")\n",
-    "    if len(data_akt.columns) == 1:\n",
-    "        print ('please use \",\" as seperator next time')\n",
-    "        data_akt = pd.read_csv(data_loc + upload, sep = \";\")\n",
-    "        input_data.append(data_akt)\n",
-    "    print(upload + \" imported succesfully\")"
+    "# input_data = []\n",
+    "# for upload in files:\n",
+    "#     data_akt = pd.read_csv(data_loc + upload, sep = \",\")\n",
+    "#     if len(data_akt.columns) == 1:\n",
+    "#         print ('please use \",\" as seperator next time')\n",
+    "#         data_akt = pd.read_csv(data_loc + upload, sep = \";\")\n",
+    "#         input_data.append(data_akt)\n",
+    "#     print(upload + \" imported succesfully\")"
    ]
   },
   {
@@ -124,13 +131,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_resample = widgets.FloatText(value = 40e3,min=1,max=100e3,step=10,\n",
+    "f_resample = widgets.FloatText(value = 1024,min=1,max=100e3,step=1,\n",
     "    description='Resampling frequency [Hz]',\n",
     "    disabled=False,readout=True,readout_format='d')\n",
     "display(f_resample)\n",
     "# select time column\n",
-    "timeColumn = widgets.Dropdown(options = data_akt.columns)\n",
-    "display(timeColumn)"
+    "# timeColumn = widgets.Dropdown(options = data_akt.columns)\n",
+    "# display(timeColumn)"
    ]
   },
   {
@@ -141,9 +148,8 @@
    "source": [
     "meas_resample = []\n",
     "for file_act in input_data:\n",
-    "    file_act = file_act.set_index(timeColumn.value)\n",
-    "    meas_resample.append(ts.TimeSignalPrep(file_act).resample_acc(f_resample.value))\n",
-    "display(file_act)"
+    "#     file_act = file_act.set_index(timeColumn.value)\n",
+    "    meas_resample.append(ts.TimeSignalPrep(file_act).resample_acc(f_resample.value))"
    ]
   },
   {
@@ -168,7 +174,10 @@
     "fig.suptitle('Resampled input data')\n",
     "ii = 0\n",
     "for df_act in meas_resample:\n",
-    "    ax[ii].plot(df_act.index, df_act[plotChan.value])\n",
+    "    if len(meas_resample) == 1:\n",
+    "        ax.plot(df_act.index, df_act[plotChan.value])  \n",
+    "    else:\n",
+    "        ax[ii].plot(df_act.index, df_act[plotChan.value])\n",
     "    ii += 1"
    ]
   },
@@ -185,8 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_min = widgets.FloatText(value = 100,description='min frequency [Hz]',disabled=False)\n",
-    "f_max = widgets.FloatText(value = 5e3,description='max frequency [Hz]',disabled=False)\n",
+    "f_min = widgets.FloatText(value = 5,description='min frequency [Hz]',disabled=False)\n",
+    "f_max = widgets.FloatText(value = 100,description='max frequency [Hz]',disabled=False)\n",
     "display(f_min)\n",
     "display(f_max)"
    ]
@@ -227,7 +236,7 @@
     "display(method_choice)\n",
     "\n",
     "paraRunStats = ['window_length', 'buffer_overlap', 'limit']\n",
-    "values = [800,0.1,0.1]\n",
+    "values = [800,0.1,0.015]\n",
     "child = [widgets.FloatText(description=name) for name in paraRunStats]\n",
     "tab = widgets.Tab()\n",
     "tab.children = child\n",
@@ -263,13 +272,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"select channel to plot\")\n",
+    "plotChan = widgets.Dropdown(options = file_act.columns)\n",
+    "display(plotChan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib notebook\n",
     "fig, ax = plt.subplots(len(meas_resample))\n",
     "fig.suptitle('Cleaned input data')\n",
     "ii = 0\n",
     "for df_act in cleaned:\n",
-    "    ax[ii].plot(df_act.index, df_act[runChan.value])\n",
-    "    ii += 1    "
+    "    if len(meas_resample) == 1:\n",
+    "        ax.plot(df_act.index, df_act[plotChan.value])  \n",
+    "    else:\n",
+    "        ax[ii].plot(df_act.index, df_act[plotChan.value])\n",
+    "    ii += 1   "
    ]
   },
   {
@@ -398,7 +421,7 @@
     "tab_repeat.children = child\n",
     "for i in range(len(child)):\n",
     "    tab_repeat.set_title(i, files[i])\n",
-    "    tab_repeat.children[i].value = 1\n",
+    "    tab_repeat.children[i].value = int(50/(i+1))\n",
     "tab_repeat"
    ]
   },
