one variable was not defined

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -634,7 +634,7 @@
     "s_vm = 2*s_vm/s_vm.max()\n",
     "\"\"\" Scale with \"\"\"\n",
     "ampl_fe = pd.DataFrame(data = amplitude, columns = [\"ampl\"] ,index =cycles)\n",
-    "s_vm_scaled = pd.DataFrame(data = ampl_fe.values*s_vm.transpose().values,index = ampl.index,columns = s_vm.index)\n",
+    "s_vm_scaled = pd.DataFrame(data = ampl_fe.values*s_vm.transpose().values,index = ampl_fe.index,columns = s_vm.index)\n",
     "display(s_vm_scaled)"
    ]
   },
