Clean demo notebooks a bit and add some information to them

--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -13,6 +13,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook detects and classifies hotspots of the von Mises stress in a connected FEM mesh. Each element/node entry of the mesh receives a number of the hotspot it is member of. \"0\" means the element/node is not part of any hotspots. \"1\" means that the element/node is part of the hotspot with the highes peak, \"2\" the same for the second highest peak and so forth.\n",
+    "\n",
+    "See [module documentation](https://pylife.readthedocs.io/en/latest/mesh/hotspot.html) further details."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -72,12 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hotSpotFrac = .5 # factor of the maximum local value\n",
-    "# maxStressLimit = 250# Absolut stress value to avoid calculation based on numerical stress speaks\n",
-    "fe_res['hotspot'] = fe_res.hotspot.calc(\"vM\",hotSpotFrac)\n",
-    "#fe_res = pd.concat([fe_res,hs],axis = 1)\n",
-    "#display(fe_res)\n",
-    "display(fe_res)"
+    "threshold = .5 # factor of the maximum local value\n",
+    "fe_res['hotspot'] = fe_res.hotspot.calc(\"vM\", threshold)\n",
+    "display(fe_res[['x', 'y', 'z', 'vM', 'hotspot']])"
    ]
   },
   {
@@ -86,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(fe_res['hotspot'].max())"
+    "print(\"%d hotspots found over the threshold\" % fe_res['hotspot'].max())"
    ]
   },
   {
@@ -98,6 +104,22 @@
     "fig, ax = plt.subplots()\n",
     "fe_res.meshplot.plot(ax, 'hotspot', cmap='jet_r')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First hotspot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(fe_res[fe_res['hotspot'] == 1])"
    ]
   }
  ],
@@ -117,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
