--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -72,7 +72,8 @@
     "\n",
     "# mpl.style.use('seaborn')\n",
     "# mpl.style.use('seaborn-notebook')\n",
-    "mpl.style.use('bmh')"
+    "mpl.style.use('bmh')\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -169,7 +170,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "fig, ax = plt.subplots(len(meas_resample))\n",
     "fig.suptitle('Resampled input data')\n",
     "ii = 0\n",
@@ -283,16 +283,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "fig, ax = plt.subplots(len(meas_resample))\n",
     "fig.suptitle('Cleaned input data')\n",
-    "ii = 0\n",
-    "for df_act in cleaned:\n",
+    "for i, df_act in enumerate(cleaned):\n",
     "    if len(meas_resample) == 1:\n",
     "        ax.plot(df_act.index, df_act[plotChan.value])  \n",
     "    else:\n",
-    "        ax[ii].plot(df_act.index, df_act[plotChan.value])\n",
-    "    ii += 1   "
+    "        ax[i].plot(df_act.index, df_act[plotChan.value])  "
    ]
   },
   {
@@ -333,17 +330,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "colormap = cm.ScalarMappable()\n",
     "cmap = cm.get_cmap('PuRd')\n",
     "# fig, ax = plt.subplots(2,len(rainflow))\n",
     "fig = plt.figure(figsize = (8,11))\n",
     "fig.suptitle('Rainflow of Channel ' + rfcChan.value)\n",
-    "ii = 1\n",
     "\n",
-    "for rf_act in rainflow:\n",
+    "for i, rf_act in enumerate(rainflow):\n",
     "    # 2D\n",
-    "    ax = fig.add_subplot(3,2,2*ii-1)\n",
+    "    ax = fig.add_subplot(3,2,2*(i+1)-1)\n",
     "    froms = rf_act.index.get_level_values('from').mid\n",
     "    tos = rf_act.index.get_level_values('to').mid\n",
     "    counts = np.flipud((rf_act.values.reshape(rf_act.index.levshape).T))#.ravel()\n",
@@ -351,7 +346,7 @@
     "    ax.set_ylabel('To')\n",
     "    ax.imshow(np.log10(counts), extent=[froms.min(), froms.max(), tos.min(), tos.max()])\n",
     "    # 3D\n",
-    "    ax = fig.add_subplot(3,2,2*ii, projection='3d')\n",
+    "    ax = fig.add_subplot(3,2,2*(i+1), projection='3d')\n",
     "    bottom = np.zeros_like(counts.ravel())\n",
     "    width = rf_act.index.get_level_values('from').length.min()\n",
     "    depth = rf_act.index.get_level_values('to').length.min()\n",
@@ -361,8 +356,7 @@
     "    ax.set_xlabel('From')\n",
     "    ax.set_ylabel('To')\n",
     "    ax.set_zlabel('Count')\n",
-    "    ax.bar3d(froms.ravel(), tos.ravel(), bottom, width, depth, counts.ravel(), shade=True, color=rgba, zsort='average')\n",
-    "    ii += 1"
+    "    ax.bar3d(froms.ravel(), tos.ravel(), bottom, width, depth, counts.ravel(), shade=True, color=rgba, zsort='average')"
    ]
   },
   {
@@ -443,7 +437,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "fig, ax = plt.subplots(nrows=1, ncols=2,figsize=(10, 5))\n",
     "# plot total\n",
     "amplitude = range_only_total.index.get_level_values('range').left.values[::-1]/2\n",
@@ -528,8 +521,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "\n",
     "SRI = mat['SD_50']*(mat['ND_50']**(1/mat['k_1']))\n",
     "# Plotting\n",
     "diagdata = WoehlerCurveDiagrams(mat, fatigue_data = None, analyzer = None,\n",
@@ -558,7 +549,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "D50 = 0.05\n",
     "d = damage.sum()\n",
     "di = np.logspace(np.log10(1e-1*d),np.log10(1e3*d),1000).flatten()\n",
@@ -671,12 +661,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "d_mesh = d_mesh_cycle.sum()\n",
     "fig, ax = plt.subplots()\n",
-    "stress.join(pd.DataFrame(data = d_mesh,columns = ['d'])).meshplot.plot(ax, 'd', cmap='jet_r')\n",
-    "plt.show()\n",
-    "plt.title(\"Damage per element\")"
+    "stress.join(pd.DataFrame(data = d_mesh,columns = ['d'])).meshplot.plot(ax, 'd', cmap='jet')\n",
+    "plt.title(\"Damage per element\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -685,7 +674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(d_mesh.max())"
+    "print(\"Maximal damage sum: %f\" % d_mesh.max())"
    ]
   }
  ],
@@ -705,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
