--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -20,7 +20,8 @@
     "from scipy import optimize as op\n",
     "import sys\n",
     "from pylife.stress.frequencysignal import psdSignal\n",
-    "import ipywidgets as wd"
+    "import ipywidgets as wd\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -38,10 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "#fsel = np.array([30,50,80,460,605,1000])\n",
     "fsel = []\n",
-    "%matplotlib notebook\n",
     "fig = plt.figure()\n",
     "plt.loglog(psd.index.values,psd)\n",
     "txt = wd.Textarea(\n",
@@ -77,16 +76,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
     "def rms_psd(psd):\n",
     "    return (sum(((psd.diff()+psd).dropna().values.flatten()*np.diff(psd.index.values)))**0.5)\n",
     "plt.loglog(psd.index.values,psd,label = \"rms = {:.2f}\".format(rms_psd(psd)))\n",
     "for ii in np.linspace(0,1,4):\n",
     "    psd_fit = psdSignal.psd_smoother(psd,fsel,ii)\n",
     "    plt.loglog(psd_fit.index.values,psd_fit,label = \"rms = {:.2f}\".format(rms_psd(psd_fit)))\n",
-    "    jj += 1\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
