--- a/demos/stress_gradient.ipynb
+++ b/demos/stress_gradient.ipynb
@@ -11,7 +11,9 @@
    "source": [
     "# Stress gradient calculation\n",
     "\n",
-    "This demo shows the stress gradient calculation module. A gradient is calculated by fitting a plane into a node and its neighbor nodes of an FEM mesh."
+    "This demo shows the stress gradient calculation module. A gradient is calculated by fitting a plane into a node and its neighbor nodes of an FEM mesh.\n",
+    "\n",
+    "See [documentation](https://pylife.readthedocs.io/en/latest/mesh/gradient.html) for details on the module."
    ]
   },
   {
@@ -121,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "name": "stress_gradient.ipynb"
  },
