--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -22,13 +22,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
+    "import pylife.vmap\n",
     "import pylife.stress.equistress\n",
     "import pylife.mesh.gradient\n",
-    "import pylife.mesh.meshplot\n"
+    "import pylife.mesh.meshplot\n",
+    "\n",
+    "import pylife.mesh.meshplot\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from matplotlib import cm\n",
+    "import matplotlib as mpl"
    ]
   },
   {
@@ -49,11 +54,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'plate_with_hole.h5'\n",
-    "\n",
-    "stress = pd.read_hdf(filename, 'node_data')\n",
-    "stress['S13'] = np.zeros_like(stress['S11'])\n",
-    "stress['S23'] = np.zeros_like(stress['S11'])"
+    "vm_mesh = pylife.vmap.VMAP(\"plate_with_hole.vmap\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vm_mesh.mesh_coords(\"1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyLife_mesh = df = (vm_mesh.mesh_coords('1')\n",
+    "                    .join(vm_mesh.variable('1', 'STATE-2', 'STRESS_CAUCHY'))\n",
+    "                    .join(vm_mesh.variable('1', 'STATE-2', 'DISPLACEMENT')))\n",
+    "pyLife_mesh.sample(10)"
    ]
   },
   {
@@ -74,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stress['mises'] = stress.equistress.mises()"
+    "pyLife_mesh['mises'] = pyLife_mesh.equistress.mises()"
    ]
   },
   {
@@ -86,7 +108,7 @@
     }
    },
    "source": [
-    "Calculate stress gradient on von Mises stress"
+    "Plotting"
    ]
   },
   {
@@ -95,8 +117,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grad = stress.gradient.gradient_of('mises')\n",
-    "grad"
+    "%matplotlib notebook\n",
+    "fig, ax = plt.subplots()\n",
+    "pyLife_mesh.meshplot.plot(ax, 'mises', cmap='jet_r')\n",
+    "plt.show()\n",
+    "# plt.title(\"Damage per element\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "53*4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pyvista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyvista as pv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyvista import examples\n",
+    "\n",
+    "mesh = examples.load_hexbeam()\n",
+    "bcpos = [(6.20, 3.00, 7.50),\n",
+    "         (0.16, 0.13, 2.65),\n",
+    "         (-0.28, 0.94, -0.21)]\n",
+    "\n",
+    "p = pv.Plotter()\n",
+    "p.add_mesh(mesh, show_edges=True, color='white')\n",
+    "p.add_mesh(pv.PolyData(mesh.points), color='red',\n",
+    "       point_size=10, render_points_as_spheres=True)\n",
+    "p.camera_position = bcpos\n",
+    "# p.show(screenshot='beam_nodes.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(mesh)"
    ]
   },
   {
