--- a/demos/stress_gradient.ipynb
+++ b/demos/stress_gradient.ipynb
@@ -22,13 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import pylife.stress.equistress\n",
     "import pylife.mesh.gradient\n",
-    "import pylife.mesh.meshplot\n"
+    "import pylife.vmap\n",
+    "\n",
+    "import pyvista as pv"
    ]
   },
   {
@@ -49,11 +50,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'plate_with_hole.h5'\n",
-    "\n",
-    "stress = pd.read_hdf(filename, 'node_data')\n",
-    "stress['S13'] = np.zeros_like(stress['S11'])\n",
-    "stress['S23'] = np.zeros_like(stress['S11'])"
+    "vm_mesh = pylife.vmap.VMAP(\"plate_with_hole.vmap\")\n",
+    "pyLife_mesh = (vm_mesh.mesh_coords('1')\n",
+    "                    .join(vm_mesh.variable('1', 'STATE-2', 'STRESS_CAUCHY'))\n",
+    "                    .join(vm_mesh.variable('1', 'STATE-2', 'DISPLACEMENT')))"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stress['mises'] = stress.equistress.mises()"
+    "pyLife_mesh['mises'] = pyLife_mesh.equistress.mises()"
    ]
   },
   {
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grad = stress.gradient.gradient_of('mises')\n",
-    "grad"
+    "# pyLife_mesh[\"grad\"] = pyLife_mesh.gradient.gradient_of('mises')\n",
+    "grad = pyLife_mesh.gradient.gradient_of('mises')"
    ]
   },
   {
@@ -104,7 +104,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pyLife_nodes = pd.concat([pyLife_mesh.groupby('node_id').mean(), grad], axis=1)\n",
+    "pyLife_nodes[\"abs_grad\"] = np.linalg.norm(grad,axis = 1)\n",
+    "display(pyLife_nodes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
+    "mesh.point_arrays[\"abs_grad\"] = pyLife_nodes[\"abs_grad\"].values\n",
+    "mesh.plot(scalars=\"abs_grad\",log_scale = False)"
+   ]
   }
  ],
  "metadata": {
@@ -123,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "name": "stress_gradient.ipynb"
  },
