Update vmap io in demos
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -46,9 +46,11 @@
    "outputs": [],
    "source": [
     "vm_mesh = pylife.vmap.VMAP(\"plate_with_hole.vmap\")\n",
-    "pyLife_mesh = (vm_mesh.mesh_coords('1')\n",
-    "                    .join(vm_mesh.variable('1', 'STATE-2', 'STRESS_CAUCHY'))\n",
-    "                    .join(vm_mesh.variable('1', 'STATE-2', 'DISPLACEMENT')))"
+    "pyLife_mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
+    "               .join_coordinates()\n",
+    "               .join_variable('STRESS_CAUCHY')\n",
+    "               .join_variable('DISPLACEMENT')\n",
+    "               .to_frame())"
    ]
   },
   {
