--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -65,9 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyLife_mesh = (vm_mesh.mesh_coords('1')\n",
-    "                    .join(vm_mesh.variable('1', 'STATE-2', 'STRESS_CAUCHY'))\n",
-    "                    .join(vm_mesh.variable('1', 'STATE-2', 'DISPLACEMENT')))\n",
+    "pyLife_mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
+    "               .join_coordinates()\n",
+    "               .join_variable('STRESS_CAUCHY')\n",
+    "               .join_variable('DISPLACEMENT')\n",
+    "               .to_frame())\n",
     "pyLife_mesh.sample(10)"
    ]
   },
@@ -156,7 +158,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
-  "name": "stress_gradient.ipynb"
+  "name": "VMAP_io.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 4
