Cleanup/restructure demo directory and doc/source/demos
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/psd_optimizer.ipynb
+++ b/demos/psd_optimizer.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## PSD Optimizer ##\n",
     "Example for the derivation of an equivalent PSD signal for shaker testing or other purposes. See the docu of the pylife psd_smoother function in the psdSignal class for more details"
@@ -30,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psd = pd.DataFrame(pd.read_csv(\"PSD_values.csv\",index_col = 0).iloc[5:1500,0])"
+    "psd = pd.DataFrame(pd.read_csv(\"data/PSD_values.csv\",index_col = 0).iloc[5:1500,0])"
    ]
   },
   {
@@ -95,8 +97,18 @@
  ],
  "metadata": {
   "kernelspec": {
+   "argv": [
+    "/home/jmu3si/Devel/pylife/.venv/bin/python",
+    "-m",
+    "ipykernel_launcher",
+    "-f",
+    "{connection_file}"
+   ],
    "display_name": "Python 3",
+   "env": null,
+   "interrupt_mode": "signal",
    "language": "python",
+   "metadata": null,
    "name": "python3"
   },
   "language_info": {
@@ -110,7 +122,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
-  }
+  },
+  "name": "psd_optimizer.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 2
