--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -16,6 +17,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -28,6 +30,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -89,6 +92,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -115,12 +119,13 @@
    },
    "outputs": [],
    "source": [
-    "file_name = 'woehler-test-data.csv'\n"
+    "file_name = 'data/woehler/fatigue-data-plain.csv'\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "subslide"
@@ -151,6 +156,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -183,6 +189,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -195,6 +202,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "fragment"
@@ -219,6 +227,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -243,6 +252,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -272,6 +282,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "slide"
@@ -307,8 +318,18 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
+   "argv": [
+    "/home/jmu3si/Devel/pylife/.venv/bin/python",
+    "-m",
+    "ipykernel_launcher",
+    "-f",
+    "{connection_file}"
+   ],
    "display_name": "Python 3",
+   "env": null,
+   "interrupt_mode": "signal",
    "language": "python",
+   "metadata": null,
    "name": "python3"
   },
   "language_info": {
