CREATE-4148: added export file, unit test file for export
Signed-off-by: Gyongyver Kiss <gyongyver.kiss@hu.bosch.com>

--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vm_mesh = pylife.vmap.VMAP(\"plate_with_hole.vmap\")"
+    "vm_mesh = pylife.vmap.VMAPImport(\"plate_with_hole.vmap\")"
    ]
   },
   {
