--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -614,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vm_mesh = pylife.vmap.VMAP(\"plate_with_hole.vmap\")\n",
+    "vm_mesh = pylife.vmap.VMAPImport(\"plate_with_hole.vmap\")\n",
     "pyLife_mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
     "               .join_coordinates()\n",
     "               .join_variable('STRESS_CAUCHY')\n",
